<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/poza_sport"
    tools:context=".Register">

    <TextView
        android:id="@+id/textView"
        android:layout_width="236dp"
        android:layout_height="72dp"
        android:layout_marginStart="169dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="158dp"
        android:layout_marginBottom="9dp"
        android:text="@string/Sportify"
        android:textColorLink="#ACAF4C"
        android:textSize="@android:dimen/notification_large_icon_height"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.598"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="236dp"
        android:layout_height="34dp"
        android:layout_marginStart="313dp"
        android:layout_marginEnd="322dp"
        android:layout_marginBottom="1dp"
        android:text="@string/Create"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editText1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="394dp"
        android:layout_height="56dp"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="3dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nume"
        android:inputType="textPersonName"
        android:textColorHint="@android:color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/editText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:targetApi="o" />


    <EditText
        android:id="@+id/editText2"
        android:layout_width="392dp"
        android:layout_height="64dp"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="11dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:textColorHint="@android:color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/editText3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText1"
        tools:targetApi="o" />

    <Button
        android:id="@+id/button"
        android:layout_width="232dp"
        android:layout_height="79dp"
        android:layout_marginStart="97dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="80dp"
        android:background="@android:color/holo_blue_bright"
        android:text="@string/but"
        android:textColorLink="@android:color/black"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="268dp"
        android:layout_height="32dp"
        android:layout_marginStart="107dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="108dp"
        android:layout_marginBottom="32dp"
        android:text="@string/f"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="379dp"
        android:layout_height="55dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="131dp"
        android:layout_marginBottom="44dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/parola"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.312"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        tools:targetApi="o" />


</androidx.constraintlayout.widget.ConstraintLayout>