<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="202dp"
        android:layout_height="105dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="99dp"
        android:background="@drawable/gradient_background"
        android:contentDescription="@string/minge"
        android:scaleType="centerInside"
        android:src="@drawable/mingiuta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="118dp"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="200dp"
        android:background="@drawable/buton_dragut"
        android:text="@string/setari"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/imageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toEndOf="@+id/button2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginBottom="200dp"
        android:background="@drawable/buton_dragut"
        android:text="@string/noti"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/imageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="152dp"
        android:layout_height="87dp"
        android:layout_marginStart="129dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="70dp"
        android:text="@string/Sportify"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="96dp"
        android:layout_height="67dp"
        android:layout_marginStart="161dp"
        android:layout_marginTop="171dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/buton_dragut"
        android:text="@string/profil"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/imageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
</androidx.constraintlayout.widget.ConstraintLayout>