<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/poza_sport"
    tools:context=".Login">

    <TextView
        android:id="@+id/textView"
        android:layout_width="222dp"
        android:layout_height="78dp"
        android:layout_marginStart="169dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="158dp"
        android:layout_marginBottom="5dp"
        android:text="@string/Sportify"
        android:textColorLink="#ACAF4C"
        android:textSize="@android:dimen/notification_large_icon_height"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.732"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="242dp"
        android:layout_height="44dp"
        android:layout_marginStart="313dp"
        android:layout_marginEnd="322dp"
        android:layout_marginBottom="16dp"
        android:text="@string/login"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/editText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="354dp"
        android:layout_height="55dp"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:textColorHint="@android:color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/editText3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:targetApi="o" />

    <Button
        android:id="@+id/button"
        android:layout_width="271dp"
        android:layout_height="105dp"
        android:layout_marginStart="235dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="271dp"
        android:layout_marginBottom="100dp"
        android:background="@android:color/holo_blue_bright"
        android:text="@string/but"
        android:textColorLink="@android:color/black"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="288dp"
        android:layout_height="42dp"
        android:layout_marginStart="107dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="108dp"
        android:layout_marginBottom="32dp"
        android:text="@string/n"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.586"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="352dp"
        android:layout_height="64dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="66dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/parola"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />
</androidx.constraintlayout.widget.ConstraintLayout>